@@ -4838,9 +4838,7 @@ void html_printer::set_numbered_char(int num, const environment *env,
     return;
   }
   if (!f->contains(g)) {
-    error("font '%1' does not contain numbered character %2",
-	  f->get_name(),
-	  num);
+    error("font '%1' has no glyph at index %2", f->get_name(), num);
     return;
   }
   int w;
